# 28_lesson_ORM_DjangoProject

./: README.md  pyproject.toml
authentication/: models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py
companies/: views.py
companies/migrations/: 0001_initial.py
djangoProject/: settings.py  urls.py
tests/: factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py
vacancies/: models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_alter_vacancy_user.py  0004_skill_vacancy_skills.py  0005_alter_skill_options_alter_vacancy_options.py  0006_skill_is_active.py
