[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["macbook <mypur86@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
djangorestframework-simplejwt = "^5.2.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
drf-spectacular = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
